--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<b>PEDRO HENRIQUE NEPOMUCENO BERNARDES</b>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Currículo</title>
+</head>
+<body>
+    <b>PEDRO HENRIQUE NEPOMUCENO BERNARDES</b>
 
 SOBRE MIM
 
@@ -13,4 +21,6 @@ FORMAÇÃO
 
 Estudante do 7 período de Engenharia de Software pela UTFPR campus Cornélio Procópio
 Formação técnica pela ETEC em Administração e Contabilidade
+</body>
+</html>
 
