--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <title>Currículo</title>
 </head>
 <body>
-    <b>PEDRO HENRIQUE NEPOMUCENO BERNARDES</b>
+    <h1>PEDRO HENRIQUE NEPOMUCENO BERNARDES</h1>
 
-SOBRE MIM
+<h2>SOBRE MIM</h2>
 
-Apaixonado por animais, jogos e livros (principalmente ficção científica hardcore)
+<h3>Apaixonado por animais, jogos e livros (principalmente ficção científica hardcore)</h3>
 
-EXPERIÊNCIAS
+<h2>EXPERIÊNCIAS</h2>
 
-2 anos no grupo ELLP como professor
-2 anos como auxiliar de TI
+<h3>2 anos no grupo ELLP como professor</h3>
+<h3>2 anos como auxiliar de TI</h3>
 
-FORMAÇÃO
+<h2>FORMAÇÃO</h2>
 
-Estudante do 7 período de Engenharia de Software pela UTFPR campus Cornélio Procópio
-Formação técnica pela ETEC em Administração e Contabilidade
+<h3>Estudante do 7 período de Engenharia de Software pela UTFPR campus Cornélio Procópio</h3>
+<h3>Formação técnica pela ETEC em Administração e Contabilidade</h3>
 </body>
 </html>
 
