--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Currículo</title>
+    <title>Meu portifólio</title>
 </head>
 <body>
-    <h1>PEDRO HENRIQUE NEPOMUCENO BERNARDES</h1>
+    <center>
+        <img src="https://avatars.githubusercontent.com/u/48726501?s=400&u=9f8e7dbdc6b13b25d2ce42b12618dc919ec19648&v=4" alt="Eu sou Pedro_">
+        <h1>PEDRO HENRIQUE NEPOMUCENO BERNARDES</h1>
+    </center>
 
 <h2>SOBRE MIM</h2>
 
