--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
             <img src="https://avatars.githubusercontent.com/u/48726501?s=400&u=9f8e7dbdc6b13b25d2ce42b12618dc919ec19648&v=4" alt="Imagem de rosto" width="150" height="150">
             <figcaption>Eu sou Pedro_</figcaption>
         </figure>
-        <h1>PEDRO HENRIQUE NEPOMUCENO BERNARDES</h1>
-        <h2>SOBRE MIM</h2>
-        <h3>Apaixonado por animais, jogos e livros (principalmente ficção científica hardcore)</h3>
-        <h2>EXPERIÊNCIAS</h2>
+        <h1>Amante de dados</h1>
+        <h3>Estudante de engenharia de Software pela UTFPR, apaixonado por dados, animais, jogos e livros. Atuando na area de analise de dados em São José dos Campos</h3>
+        <h2>Meus Projetos</h2>
         <h3>2 anos no grupo ELLP como professor</h3>
         <h3>2 anos como auxiliar de TI</h3>
-        <h2>FORMAÇÃO</h2>
-        <h3>Estudante do 7 período de Engenharia de Software pela UTFPR campus Cornélio Procópio</h3>
-        <h3>Formação técnica pela ETEC em Administração e Contabilidade</h3>
+        <h3>Atualmente na area de dados</h3>
+        <h2>Meus contatos</h2>
+        <a href="https://github.com/pedrohnb">GITHUB</a>
     </center>
 </body>
 </html>
