--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <center>
         <figure>
-            <img src="https://avatars.githubusercontent.com/u/48726501?s=400&u=9f8e7dbdc6b13b25d2ce42b12618dc919ec19648&v=4" alt="Imagem de rosto" width="150" height="150">
+            <img src="https://avatars.githubusercontent.com/u/48726501?s=400&u=9f8e7dbdc6b13b25d2ce42b12618dc919ec19648&v=4" alt="Imagem de rosto" width="150" height="108">
             <figcaption>Eu sou Pedro_</figcaption>
         </figure>
         <h1>Amante de dados</h1>
         <h3>Estudante de engenharia de Software pela UTFPR, apaixonado por dados, animais, jogos e livros. Atuando na area de analise de dados em São José dos Campos</h3>
         <h2>Meus Projetos</h2>
         <figure>
-            <img src="https://instagram.fppy5-1.fna.fbcdn.net/v/t51.2885-19/460290391_1652536935527766_4045869939706012084_n.jpg?stp=dst-jpg_s150x150_tt6&_nc_ht=instagram.fppy5-1.fna.fbcdn.net&_nc_cat=106&_nc_oc=Q6cZ2QHaffc-Rut4Lqj_zjqUFgq_FmhP9p5L2IrI8fv6ivQKdv2IZa4ANyez7F6CAW5TAwg&_nc_ohc=JyPUXWiHqKUQ7kNvwF5IL6r&_nc_gid=Vze3UxQ8ftKwAOQ07ZAOag&edm=AP4sbd4BAAAA&ccb=7-5&oh=00_AYGNSJRcibPKoTG14DX17TbxAMKRllYtg26XkMcSs2I2og&oe=67F5C403&_nc_sid=7a9f4b" alt="Imagem do ELLP" width="150" height="150">
+            <img src="https://grupoellp.com.br/assets/imagens/logo-navbar.png" alt="Imagem do ELLP" width="150" height="150">
             <figcaption>2 anos no grupo ELLP como professor</figcaption>
             <img src="https://cursa-cat-img.s3.amazonaws.com/courses/pt/montagem-e-manutencao-de-computadores-hcb_s.webp" alt="Imagem exemplo de TI" width="150" height="150">
             <figcaption>2 anos como auxiliar de TI</figcaption>
